<resources>
    <string name="app_name">Few Crypto Converter</string>

    <string name="bottom_bar_home">Home</string>
    <string name="prices">Prices</string>
    <string name="bottom_bar_portfolio">Portfolio</string>
    <string name="bottom_bar_discover">Discover</string>
    <string name="bottom_bar_settings">Settings</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="screen_settings">Settings Screen</string>
    <string name="screen_prices">Prices Screen</string>
    <string name="screen_discover">Discover Screen</string>
    <string name="screen_portfolio">Portfolio Screen</string>
    <string name="toast_coming_soon">Coming soon.</string>
    <string name="home_title_global_metrics">Global Metrics</string>
    <string name="home_title">Home</string>
    <string name="see_all_news">See all news</string>
    <string name="see_all">See All</string>
    <string name="home_header_title_top_coins">Top Coins</string>
    <string name="home_header_title_gainers_and_losers"><![CDATA[Gainers & Losers]]></string>
    <string name="home_header_subtitle_based_on_top_100_coins">Based on Top 100 Coins</string>
    <string name="home_header_title_news">News</string>
    <string name="button_convert">Convert</string>
    <string name="conversion_instruction">Note: If you want to convert to another coin, select a coin icon to select the desired coin.</string>
</resources>